<resources>
    <!--task 2-->
    <string name="app_name">PointsOfInterestApp</string>
    <string name="addpoi">Add a new POI</string>
    <string name="poiname">Name</string>
    <string name="poitype">Type</string>
    <string name="poidescription">Description</string>
    <string name="poilat">Latitude</string>
    <string name="poilong">Longitude</string>
    <string name="addpoibutton">Add!</string>
    <string name="backaddpoibutton">Come back to the map</string>

    <string-array name="poi_types">
        <item>hotel</item>
        <item>city</item>
        <item>town</item>
        <item>historical site</item>
        <item>bar</item>
        <item>restaurant</item>
        <item>beach</item>
        <item>mountain</item>
        <item>pub</item>
    </string-array>

    <!--task 3-->
    <string name="savepois">Save POIs</string>

    <!--task 4-->
    <string-array name="uploadWebOptions">
        <item>YES</item>
        <item>NO</item>
    </string-array>

    <string name="prefsactivity">Preferences</string>

    <!--task 5-->
    <string name="loadpois">Load POIs</string>

    <!--task 6-->
    <string name="loadpoisfromweb">Load POIs from WEB</string>

    <!--task 8-->
    <string name="listofpois">List of all POIs</string>
</resources>
