<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addpoi"
        android:textSize="32dip" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poiname"/>

    <EditText
        android:id="@+id/poiname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poitype"/>

    <Spinner
        android:id="@+id/poitype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/poi_types" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poilat"/>

    <EditText
        android:id="@+id/poilat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poilong"/>

    <EditText
        android:id="@+id/poilon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poidescription"/>


    <EditText
        android:id="@+id/poidescription"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|left"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addpoibutton"
        android:id="@+id/btnAddPoi" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backaddpoibutton"
        android:id="@+id/btnBackAddPoi" />

    <TextView
        android:id="@+id/addpoierror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:textColor="#FF0000"/>


</LinearLayout>
